# tinyrenderer

./: CMakeLists.txt  LICENSE
include/: GLOBAL.h  bmp.h  camera.h  hittable.h  rayTracer.h
src/: GLOBAL.h  bmp.cpp  bmp.h  camera.cpp  hittable.cpp  interval.cpp  interval.h  main.cpp  material.cpp  material.h  matrix.cpp  matrix.h  ray.cpp  ray.h  rayTracer.cpp  spheer.cpp  spheer.h  triangle.cpp  triangle.h
